<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.joseblandon.fragments.EncuentrosFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        style="@style/linearLayoutStyle">
        <TextView
            style="@style/textViewStyle.Title"
            android:text="@string/zungo"/>

        <ImageView
            style="@style/imageViewStyle"
            android:src="@drawable/parque_zungo"/>

        <TextView
            style="@style/textViewStyle.Content"
            android:text="@string/zungoInfo"/>

        <Button
           style="@style/ButtonStyle"
            android:text="@string/irMapa"
            android:onClick="mapsZungo"/>

    </LinearLayout>
</FrameLayout>
</ScrollView>